// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Avatar Avatar shapes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div
      css={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          circular
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          css={[Function]}
        >
          
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          css={[Function]}
        >
          
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          css={[Function]}
        >
          
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          css={[Function]}
        >
          
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
    <div
      css={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          regular
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          css={[Function]}
        >
          
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          css={[Function]}
        >
          
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          css={[Function]}
        >
          
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          css={[Function]}
        >
          
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
    <div
      css={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          rounded
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          css={[Function]}
        >
          
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          css={[Function]}
        >
          
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          css={[Function]}
        >
          
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          css={[Function]}
        >
          
          <span
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "padding": "0.125rem",
              }
            }
            onClick={[Function]}
          >
            <span
              css={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with icon 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
      >
        
        <span
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
              "padding": "0.125rem",
            }
          }
          onClick={[Function]}
        >
          <span
            css={[Function]}
          />
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
      >
        
        <span
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
              "padding": "0.125rem",
            }
          }
          onClick={[Function]}
        >
          <span
            css={[Function]}
          />
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
      >
        
        <span
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
              "padding": "0.125rem",
            }
          }
          onClick={[Function]}
        >
          <span
            css={[Function]}
          />
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
      >
        
        <span
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
              "padding": "0.125rem",
            }
          }
          onClick={[Function]}
        >
          <span
            css={[Function]}
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with letter 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
      >
        
        CZ
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
      >
        
        CZ
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
      >
        
        GR
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
      >
        
        G
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with src 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
      >
        <img
          src="https://material-ui.com/static/images/avatar/1.jpg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
      >
        <img
          src="https://material-ui.com/static/images/avatar/1.jpg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
      >
        <img
          src="https://material-ui.com/static/images/avatar/1.jpg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={[Function]}
      >
        <img
          src="https://material-ui.com/static/images/avatar/1.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;
